feat: DiscoveryRequestMapper implementation